fix: overflow

--- a/src/pages/pageComponents/Footer/style.css
+++ b/src/pages/pageComponents/Footer/style.css
@@ -5,7 +5,7 @@
   font-family: sans-serif;
   position: relative;
   bottom: 0;
-  width: 100vw;
+  width: 99vw;
   border-top: solid 1px rgba(0, 0, 0, 0.199);
 }
 
